# ParkSight

./: .editorconfig  .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: .env.example  Dockerfile  README.md  requirements.txt
backend/app/: config.py  dependencies.py  main.py  schemas.py
backend/app/routers/: congestion.py  copilot.py  economic.py  events.py  evidence.py  executive.py  forecast.py  hotspots.py  impact_scores.py  intelligence.py  overview.py  patrol.py  scenarios.py  system.py
backend/app/services/: artifact_loader.py  congestion_intelligence.py  congestion_service.py  copilot_service.py  dashboard_service.py  economic_service.py  event_simulator.py  evidence_service.py  executive_service.py  forecast_service.py  hotspot_service.py  (+3 more)
backend/tests/: conftest.py  test_api.py  test_artifact_loader.py  test_economic.py  test_evidence.py  test_overview.py  test_patrol.py
data/: README.md
data/samples/: sample_violations.csv
docs/: api.md  architecture.md  data-schema.md  deployment.md  development.md
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
parksight/: __init__.py  bias_audit.py  capacity_impact.py  cli.py  config.py  data_loader.py  evidence.py  hotspot_detection.py  nonjunction_hotspots.py  patrol_optimization.py  pipeline.py  reporting.py  risk_scoring.py  spatial_validation.py  temporal_audit.py  traffic_enrichment.py  utils.py
(+53 files in other folders)
