[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parksight-ai"
version = "1.0.0"
description = "ParkSight AI — illegal-parking hotspot intelligence pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "requests>=2.31",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
parksight = "parksight.cli:main"

[tool.setuptools.packages.find]
include = ["parksight*"]

[tool.ruff]
line-length = 110
target-version = "py310"
